Fixed CSS overflow-issues and menu/main height.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,10 +6,11 @@
 @import "view.scss";
 
 html, body, #root {
+  display: flex;
   padding: 0;
   margin: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 * {
@@ -28,7 +29,7 @@ html, body, #root {
 
   .main {
     @include flex(column);
-    height: calc(100% - 34px);
+    height: calc(100% - 31px);
 
     @include view();
   }
