--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,6 +1,7 @@
 @mixin menu {
 
   .menu {
+    height: 32px;
     @include flex($grow: 0);
 
     width: 100%;
